# inky-pi-2

./: .gitignore  pyproject.toml
app/: index.html  package-lock.json  package.json  vite.config.ts
app/src/: App.vue  main.ts
app/src/assets/: base.css  main.css  system.json
app/src/components/: AlCalendar.vue  BasicForm.vue  DateUtils.ts  ThemeSelector.vue  ThemeTools.js  Versions.vue
app/src/router/: index.js
app/src/views/: DisplaySettings.vue  PluginSettings.vue  Scheduler.vue  SystemSettings.vue  (+1 more)
python/: eink-billboard.py  inkypi2.py  requirements-dev.txt  requirements-device.txt  requirements.txt
python/blueprints/: api.py  root.py
python/datasources/: data_source.py
python/display/: display_base.py  mock_display.py  tkinter_window.py
python/model/: configuration_manager.py  hash_manager.py  schedule.py  schedule_loader.py  schedule_manager.py  service_container.py
python/plugins/: plugin_base.py  plugin_manager.py
python/task/: active_plugin.py  application.py  basic_task.py  display.py  future_source.py  message_router.py  messages.py  playlist_layer.py  scheduler.py  telemetry_sink.py  timer.py  timer_tick.py
python/tests/: headless.html  test_application.py  test_basic_task.py  test_configuration_manager.py  test_data_source.py  test_future_source.py  test_hash_manager.py  test_headless_render.py  test_layers.py  test_plugin.py  test_schedule.py  test_schedule_loader.py  test_schedule_manager.py  test_service_container.py  test_timer.py  test_timer_tick.py  utils.py
python/utils/: file_utils.py  image_utils.py  utils.py
(+53 files in other folders)
