[project]
name = "eink-billboard"
version = "0.1.0"
description = "e-Ink Billboard"
readme = "readme.md"
requires-python = ">=3.13"
dependencies = [
    "cysystemd==2.0.1 ; sys_platform == 'linux'",
    "feedparser==6.0.11",
    "flask==3.1.1",
    "icalendar==6.3.1",
    "inky==2.2.1 ; sys_platform == 'linux'",
    "numpy==2.2.1",
    "openai==1.58.1",
    "pathvalidate==3.3.1",
    "pillow==11.0.0",
    "psutil==7.0.0",
    "python-dotenv==1.0.1",
    "pytz==2025.2",
    "recurring-ical-events==3.7.0",
    "requests==2.32.4",
    "urllib3==2.5.0",
    "waitress==3.0.2",
    "watchdog==6.0.0",
    "werkzeug==3.1.3",
]

[dependency-groups]
dev = [
    "flask-cors==6.0.1",
]
